--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@swc/core": "^1.3.21",
     "@swc/jest": "^0.2.23",
     "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.10",
     "jest": "^29.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
